add get redirect
