# internal/httpserver/short_url/service.go
@@ -1,0 +1,1 @@
+package short_url
